fix: fixed button overflow on smaller screens

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -88,6 +88,7 @@ nav{
 }
 
 .imgDescription {
+    font-size: 1.4rem;
     position: absolute;
     top: 0;
     bottom: 0;
